syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "ru.neoflex.market.order";

package order;

message OrderRequest {
  int32 id = 1;
}

message OrderResponse {
  string response = 1;
}

service OrderService {
  rpc getOrder(OrderRequest) returns (OrderResponse) {}
}